Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1415

C++ binary encoder and decoder doesn't handle uninitialzed enums

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.4
    • None
    • c++
    • None

    Description

      When enums are not properly initialized and when they get encoded / decoded, C++ enum encoding and decoding traits don't check for uninitialed enums and it encodes the wrong values. When Java or C# tries to decode them, they throw out of boundary exceptions.

      Attachments

        1. AVRO-1415-2.patch
          5 kB
          Thiruvalluvan M. G.
        2. AVRO-1415.patch
          2 kB
          Ramana Suvarapu

        Activity

          People

            ramanasv Ramana Suvarapu
            ramanasv Ramana Suvarapu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: