AVRO-1415. C++ binary encoder and decoder doesn't handle uninitialzed enums

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1557041 13f79535-47bb-0310-9956-ffa450edef68